Minor changes - Removed reportWebVitals from index.tsx and unwanted imports - Updated Header component, button now submits form - Added strings used on Header to i18n file

--- a/src/i18n/en-UK.json
+++ b/src/i18n/en-UK.json
@@ -1,3 +1,7 @@
 {
-  "storageName": "kanban"
+  "storageName": "kanban",
+  "header": {
+    "placeholder": "Enter title for card...",
+    "addTodo": "Add a to do card"
+  }
 }
